# stm32-bm

./: .gitignore  CMakeLists.txt
examples/template/: CMakeLists.txt
include/: FreeRTOSConfig.h  global.h  main.h  peripherals.h
ld/: STM32F031K6T6.ld
src/: core.S  main.c  vector_table.S
vendor_include/: stm32f0xx.h
